<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoEscuestadoActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/TitleEncuesta"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_below="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Linear">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Nombre" />

        <EditText
            android:id="@+id/txbNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Escriba el nombre"
            android:layout_alignParentRight="true"
            android:layout_toStartOf="@+id/textView4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Linear2"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/Edad"
            />

        <EditText
            android:id="@+id/txbEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Escriba la edad"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Linear2"
        android:gravity="center">

        <Button
            android:id="@+id/btnListarAlimentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnListarAlimentosClick"
            android:text="@string/btnListarAlimento"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnProcesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:onClick="btnProcesarClick"
        android:text="@string/btnProcesar" />

</RelativeLayout>